# bl4s5i

./: .gitignore  CMakeLists.txt  openocd-debug.cfg
Core/Inc/: dfsdm.h  main.h
Core/Src/: adc.c  clock.c  dfsdm.c  gpio.c  i2c.c  main.c  main.cpp  octospi.c  spi.c  stm32l4xx_it.c  syscalls.c  usart.c
